services/servarr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: services
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
