services/servarr/prowlarr/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: test-local-hohepa-dev-tls
